--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
+ <meta charset="UTF-8">
+ <title>Hello World!</title>
+ <met name="viewport" content="width=device-width,inital-scale=1">
+ <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
